# knue-ocr-gateway

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  tasks.md
.github/: dependabot.yml
.github/workflows/: ci.yml
caddy/: Caddyfile
docs/: gateway-lint.md  tls-caddy.md  worker-tuning.md
gateway/: .golangci.yml  Dockerfile  go.mod  main.go  main_test.go
worker/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
worker/app/: engine.py  main.py  pdf.py
worker/eval/: analyze.py  generate_samples.py  run_eval.py
worker/tests/: test_engine.py  test_main.py  test_pdf.py
