[project]
name = "knue-ocr-worker"
version = "0.1.0"
description = "PaddleOCR HTTP worker for the KNUE OCR gateway"
requires-python = "==3.11.*"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.31",
    "pillow==12.2.0",
    "pymupdf==1.25.2",
    "opencv-python-headless==4.10.0.84",
    "numpy==1.26.4",
]

# PaddleOCR + paddlepaddle are heavy and ship no arm64 oneDNN build, so they
# live in an optional extra. Production installs `.[engine]`; tests mock
# inference (engine imports paddle lazily) and skip the extra entirely.
[project.optional-dependencies]
engine = [
    "paddlepaddle==2.6.2",
    "paddleocr==2.9.1",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.uv]
# This is a deployable app, not a distributable library — don't build/install
# the project itself into the environment.
package = false
