[project]
name = "knue-ocr-worker"
version = "0.1.0"
description = "PaddleOCR HTTP worker for the KNUE OCR gateway"
requires-python = "==3.11.*"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "python-multipart==0.0.32",
    "pillow==12.3.0",
    "pymupdf==1.28.0",
    "opencv-python-headless==4.10.0.84",
    "numpy==1.26.4",
]

# PaddleOCR + paddlepaddle are heavy and ship no arm64 oneDNN build, so they
# live in an optional extra. Production installs `.[engine]`; tests mock
# inference (engine imports paddle lazily) and skip the extra entirely.
[project.optional-dependencies]
engine = [
    "paddlepaddle==3.3.1",
    "paddleocr==3.7.0",
    # paddle 2.6.2 imports setuptools at import time but doesn't declare it;
    # uv-managed venvs don't seed setuptools, so without this pin the worker
    # dies on `import paddle` (ModuleNotFoundError: setuptools).
    "setuptools==83.0.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.1.1",
]

[tool.uv]
# This is a deployable app, not a distributable library — don't build/install
# the project itself into the environment.
package = false
